Closed Bug 15676 Opened 25 years ago Closed 25 years ago

Display problem in Subject header with non-ascii when Forwarding

Categories

(MailNews Core :: Internationalization, defect, P3)

x86
Windows NT
defect

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: marina, Assigned: jefft)

References

Details

Attachments

(2 files)

When Forwarding a message where there are non-ascii(same problem with
double-byte chars)in the Subject header they are displayed as QP.
Steps to reproduce:
-open Smoke test folder, select the first message;
-click Forward;
//note: in the Subject header instead of Sant(e&accute)Nouveau! you have
[Fwd: =?iso-8859-1?Q?Sant=E9?=  Nouveau!]

***** observed with 1999-10-06-08-M11 build ***********
Is this a regression from M10?
Yes, this is a regression. I think i need to mention that this problem doesn't
occur with Reply.
Assignee: nhotta → rhp
Rich, could you take a look at this? Looks like MIME decoding is not applied.
Assignee: rhp → jefft
Forwarding was done by Jeff Tsai...sorry Jeff :-) Can you take a look at this.

- rhp
other testing additions: the problem occurs for both HTML and Plain text.
Target Milestone: M11
marina, can you provide me the steps to reproduce this problem or attach the raw
message to this bug? Thanks much.
To reproduce this bug use the attached .zip file with 5 messages (non-ascii,
double-byte chars).
Steps to reproduce:
-select a message from the Smoketest folder;
-click Forward and
//note: in the Subject field the message header looks like there is no MIME
decoding done, QP.
marina, could you attach the Smoketest folder again? Don't zip it. I am having
problem saving the attachment or viewing it. Thanks.
Status: NEW → ASSIGNED
Status: ASSIGNED → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
Decode the string based on charset prior setting it to nsMsgComposeFields. Move
nsMsgI18N.h & nsMsgI18N.cpp from compose/src to base/util.
Status: RESOLVED → VERIFIED
marking as verified after testing 1999-10-15-09M11 build
Blocks: 16654
Product: MailNews → Core
Product: Core → MailNews Core
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: