fixed bug 15676 - Display problem in Subject header with non-ascii when Forwarding; decode the subject string based on character prior setting it to nsMsgComposeFields; move nsMsgI18N.h, nsMsgI18N.cpp from compose/src to base/util; r=rhp, nhotta